Fix payment method getting cut off on add booking dialog

--- a/src/activity/activity-book.css
+++ b/src/activity/activity-book.css
@@ -26,3 +26,7 @@ abl-activity-book md-card {
 list-item {
     display: block !important;
 }
+
+.payment-section {
+  margin-bottom: 54px;
+}
